2006-12-05  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Allow "all" argument to -j to select
	  all nodes with SLURM jobs as targets.

	* doc/pdsh.1.in : Document "all" argument to -j option.

	* config/ac_msghdr_accrights.m4 : Add missing m4 include file.

2006-12-04  Mark Grondona <mgrondona@llnl.gov>

	* configure.ac : Define _POSIX_PTHREAD_SEMANTICS for Solaris
	  to get version of sigwait(2) with two arguments.

	* config/ac_msghdr_accrights.m4, configure.ac, config/Makefile.am : 
	  Add check for msg_accrights in struct msghdr. 

	* src/pdsh/privsep.c : Use msg_accrights instead of msg_control 
	  if it exists. (Fix for compile on Solaris)

	* src/pdsh/pcp_server.c : Ensure roundup is defined.

	* aclocal.m4, config.h.in, configure, Makefile.in, 
	  config/Makefile.in, doc/Makefile.in, etc/Makefile.in, 
	  scripts/Makefile.in, src/Makefile.in, src/common/Makefile.in,
	  src/modules/Makefile.in, src/pdsh/Makefile.in, 
	  src/qsnet/Makefile.in, testsuite/Makefile.in, 
	  testsuite/pdsh.test/Makefile.in :
	  Re-run bootstrap.

	* src/common/split.h, src/common/split.c : 
	  Add list_split_append() to append results of string split onto 
	  existing list.  Also, don't allocate new string in list_join().

	* src/pdsh/opt.c : Update callers of list_join().

	* src/common/split.c : list_split_append() returns list_split() if
	  list argument is NULL.
	  
	* src/modules/dshgroup.c, src/modules/genders.c, 
	  src/modules/netgroup.c, src/modules/nodeattr.c,
	  src/modules/slurm.c :
	  Convert to use list_split_append() instead of statically defined
	  helper functions.

2006-08-25  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Remove erroneous "Requires: whatsup" from netgroup
	  and dshgroup. Remove Conflicts from machines. Build netgroup and
	  dshgroup by default since they have no build requirements.

2006-08-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c : Allow default user name to also be 